--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,7 @@ footer .logo{margin: 0;}
 /*ADAPTATION 428*/
 
 
+    .container{width: 100%;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7))}
     .sec-h-one{text-align: center;}
@@ -758,14 +759,16 @@ img{width: 100%; height: auto; display: block;}
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     .footer-div{flex-wrap: wrap;
-        align-items: center;
-        /*justify-content: center;*/}
+                align-items: center;
+                /*justify-content: center;*/
+                justify-content: center;}
 .customer-link{width: 190px;}
 .footer-soc-div{align-items: center;
                 justify-content: center;}
 .footer-input{width: 398px;}
 .footer-sub{margin-left: 0px;}
-
+.footer-p{margin-top: 72px; text-align: center;}
+.footer-soc-div{margin-left: 0px;}
 }
 
 /*ADAPTATION 768*/
@@ -867,6 +870,9 @@ img{width: 100%; height: auto; display: block;}
     .footer-soc-div{margin-left: 24px;}
     .customer-link{width: 168px;}
     .footer-form{display: flex;}
+    .footer-p{margin: 0;}
+    .footer-soc-div{margin-left: 120px;}
+    .footer-div{}
     }
 
 /*ADAPTATION 1158*/
@@ -956,4 +962,7 @@ img{width: 100%; height: auto; display: block;}
 .footer{padding-left: 0;}
 .footer-soc-div{margin-left: 120px;}
 .footer-form{display: flex;}
+.footer-p{margin: 0;}
+.footer-soc-div{margin-left: 120px;}
+.footer-div{}
 }
