--- a/css/styles.css
+++ b/css/styles.css
@@ -882,6 +882,8 @@ img{width: 100%; height: auto; display: block;}
     .footer-div{align-items: flex-start;
                 justify-content: flex-start;}
     .footer-button{margin-top: 0;}
+    .footer .logo{justify-content: flex-start;
+                  align-items: flex-start;}
     }
 
 /*ADAPTATION 1158*/
@@ -977,4 +979,6 @@ img{width: 100%; height: auto; display: block;}
 .footer-div{align-items: flex-start;
             justify-content: flex-start;}
 .footer-button{margin-top: 0;}
+.footer .logo{justify-content: flex-start;
+              align-items: flex-start;}
 }
