--- a/css/styles.css
+++ b/css/styles.css
@@ -663,6 +663,18 @@ footer .logo{margin: 0;}
 .modal-fill{margin-bottom: 8px;}
 
 
+/*WINDOW MENU*/
+
+
+.{}
+
+
+/*WINDOW MENU FORM SETTINGS*/
+
+
+.{}
+
+
 /*ADAPTATION 428*/
 
 
