--- a/css/styles.css
+++ b/css/styles.css
@@ -84,9 +84,7 @@ body {
                  margin-left: auto;
                  align-items: center;
                  justify-content: center;
-                 padding: 0;
-                 padding-left: 16px;
-                 padding-right: 16px;}
+                 padding: 0;}
 .header-menu{position: absolute;
              stroke: var(--darker-color);
              margin-left: auto;}
