--- a/css/styles.css
+++ b/css/styles.css
@@ -702,7 +702,7 @@ footer .logo{margin: 0;}
     width: 100vw;
     height: 100vh;
     padding: 32px;
-    background-color: var(--brand-color);
+    background-color: var(--white-color);
     z-index: 999;
   
     transform: translateX(100%);
@@ -715,7 +715,7 @@ footer .logo{margin: 0;}
     position: absolute;
     top: 16px;
     right: 16px;
-    color: var(--white-color);}
+    color: var(--brand-color);}
   
   .mobile-menu {
     padding: 0;
@@ -725,7 +725,7 @@ footer .logo{margin: 0;}
   .mobile-menu .link {
     display: block;
     padding: 10px;
-    color: var(--white-color);
+    color: var(--brand-color);
     text-decoration: none;}
 
 
