--- a/css/styles.css
+++ b/css/styles.css
@@ -688,7 +688,7 @@ footer .logo{margin: 0;}
     outline: none;}
   
   @media (min-width: 768px) {
-    .menu-toggle {
+    .header-but-menu {
       display: none;}}
   
   .menu-toggle:hover,
