--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,7 @@ footer .logo{margin: 0;}
 /*WINDOW MENU*/
 
 
+.mobile-contacts{list-style: none;}
 .menu-soc{display: flex;
           gap: 56px;
           margin-top: 48px;}
@@ -693,8 +694,7 @@ footer .logo{margin: 0;}
     opacity: 0.1;
     border: 1px solid var(--darker-color);
     border-radius: 50%;
-    cursor: pointer;
-    margin-bottom: 24px;}
+    cursor: pointer;}
 .menu-icon{fill: var(--darker-color);}
   
   @media (min-width: 768px) {
@@ -728,6 +728,13 @@ footer .logo{margin: 0;}
     color: var(--brand-color);}
   
   .mobile-menu {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     padding: 0;
     margin: 0;
     list-style: none;}
@@ -735,8 +742,13 @@ footer .logo{margin: 0;}
   .mobile-menu .link {
     display: block;
     padding: 10px;
-    color: var(--brand-color);
+    color: var(--darker-color);
     text-decoration: none;}
+
+    .mob-menu-page1{margin-top: 32px; margin-bottom: 20px;}
+    .mob-menu-page2{margin-top: 20px; margin-bottom: 20px;}
+    .mob-menu-page3{margin-top: 20px; margin-bottom: 284px;}
+
 
 
 /*ADAPTATION 428*/
