--- a/css/styles.css
+++ b/css/styles.css
@@ -663,30 +663,13 @@ footer .logo{margin: 0;}
 .modal-fill{margin-bottom: 8px;}
 
 
-/*WINDOW MENU*/
-
-
-.mobile-contacts{list-style: none;}
-.menu-soc{display: flex;
-          gap: 56px;
-          margin-top: 48px;}
-.menu-li{width: 40px;
-         height: 40px;}
-.menu-link{width: 100%;
-           height: 100%;
-           border-radius: 50%;
-           background-color: var(--brand-color);
-           display: flex;
-           align-items: center;
-           justify-content: center;}
-.{}
-
-
 /*WINDOW MENU FORM SETTINGS*/
 
 
 .menu-toggle {display: flex;
     width: 24px; height: 24px;
+    margin-top: 24px;
+    margin-right: 24px;
     justify-content: center;
     align-items: center;
     margin-left: auto;
@@ -714,7 +697,6 @@ footer .logo{margin: 0;}
     padding: 32px;
     background-color: var(--white-color);
     z-index: 999;
-  
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;}
   
@@ -741,14 +723,46 @@ footer .logo{margin: 0;}
   
   .mobile-menu .link {
     display: block;
-    padding: 10px;
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 32px; margin-bottom: 20px;}
+    .mob-menu-page1{margin-top: 32px; padding-top: 32px; margin-bottom: 20px;}
     .mob-menu-page2{margin-top: 20px; margin-bottom: 20px;}
     .mob-menu-page3{margin-top: 20px; margin-bottom: 284px;}
+    .mob-menu-page1:focus{color: var(--violet-color);}
+    .mob-menu-page2:focus{color: var(--violet-color);}
+    .mob-menu-page3:focus{color: var(--violet-color);}
 
+    .mobile-contacts{list-style: none;}
+    .mob-number{font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: var(--brand-color);}
+    .mob-mail{margin-top: 40px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;}
+    .menu-mob-mail{color: var(--gray-color);}
+
+.menu-soc{display: flex;
+          gap: 56px;
+          margin-top: 48px;}
+.menu-li{width: 40px;
+         height: 40px;}
+.menu-link{width: 100%;
+           height: 100%;
+           border-radius: 50%;
+           background-color: var(--brand-color);
+           display: flex;
+           align-items: center;
+           justify-content: center;}
 
 
 /*ADAPTATION 428*/
