--- a/css/styles.css
+++ b/css/styles.css
@@ -692,6 +692,8 @@ footer .logo{margin: 0;}
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     padding: 32px;
@@ -719,7 +721,8 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     padding: 0;
     margin: 0;
-    list-style: none;}
+    list-style: none;
+    margin-bottom: auto;}
   
   .mobile-menu .link {
     display: block;
