--- a/css/styles.css
+++ b/css/styles.css
@@ -720,6 +720,7 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     padding: 0;
     margin: 0;
+    margin-left: 40px;
     list-style: none;
     margin-bottom: auto;}
   
@@ -728,9 +729,9 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 32px; padding-top: 32px; margin-bottom: 20px;}
-    .mob-menu-page2{margin-top: 20px; margin-bottom: 20px;}
-    .mob-menu-page3{margin-top: 20px; margin-bottom: 284px;}
+    .mob-menu-page1{padding-top: 32px; padding-bottom: 20px;}
+    .mob-menu-page2{padding-top: 20px; padding-bottom: 20px;}
+    .mob-menu-page3{padding-top: 20px; padding-bottom: 0;}
     .mob-menu-page1:focus{color: var(--violet-color);}
     .mob-menu-page2:focus{color: var(--violet-color);}
     .mob-menu-page3:focus{color: var(--violet-color);}
@@ -755,7 +756,8 @@ footer .logo{margin: 0;}
 
 .menu-soc{display: flex;
           gap: 56px;
-          margin-top: 48px;}
+          margin-top: 48px;
+          margin-left: 40px;}
 .menu-li{width: 40px;
          height: 40px;}
 .menu-link{width: 100%;
