--- a/css/styles.css
+++ b/css/styles.css
@@ -774,8 +774,7 @@ footer .logo{margin: 0;}
 
 .menu-soc{display: flex;
           gap: 56px;
-          margin-top: 48px;
-          margin-left: 40px;}
+          margin-top: 48px;}
 .menu-li{width: 40px;
          height: 40px;}
 .menu-link{width: 100%;
