--- a/css/styles.css
+++ b/css/styles.css
@@ -755,7 +755,9 @@ footer .logo{margin: 0;}
     .mob-menu-page3:focus{color: var(--violet-color);}
 
     .mobile-contacts{list-style: none;
-                     padding-inline-start: 0px;}
+                     padding-inline-start: 0px;
+                     margin-block-start: 0;
+                     margin-block-end: 0;}
     .mob-number{font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
