--- a/css/styles.css
+++ b/css/styles.css
@@ -667,8 +667,8 @@ footer .logo{margin: 0;}
 
 .menu-toggle {display: flex;
     width: 24px; height: 24px;
-    margin-top: 24px;
-    margin-right: 24px;
+    /*margin-top: 24px;
+    margin-right: 24px;*/
     justify-content: center;
     align-items: center;
     margin-left: auto;
@@ -814,8 +814,8 @@ footer .logo{margin: 0;}
                 gap: 24px;}
             
 @media screen and (min-width: /*428px*/ 420px){
-    .header{margin-top: 24px; 
-            margin-bottom: 24px;
+    .header{padding-top: 24px; 
+            padding-bottom: 24px;
             }
     .header-list{display: none;}
     .header-but-menu{display: flex;}
@@ -827,7 +827,10 @@ footer .logo{margin: 0;}
             .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mobx2.jpg)}
         }
-    .sec-one{width: 100%;}
+    .sec-one{width: 100%;
+            height: 432px;
+            padding-top: 112px;
+            padding-bottom: 112px;}
     .sec-h-one{text-align: center;
         width: 320px;
         font-size: 36px;
@@ -846,12 +849,14 @@ footer .logo{margin: 0;}
         letter-spacing: 0.02em;
         text-transform: capitalize;
         justify-content: center;
-        align-items: center;}
+        align-items: center;
+        text-align: center;}
     .sec-two-text{font-weight: 500;
         max-width: 356px;
         font-size: 16px;
         line-height: 1.5;
-        letter-spacing: 0.02em;}
+        letter-spacing: 0.02em;
+        }
     .sec-three{padding-bottom: 120px; display: none;}
 .sec-three-list{gap: 24px;
                 flex-wrap: wrap;
@@ -922,7 +927,10 @@ img{width: 100%; height: auto; display: block;}
                 .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
             rgba(46, 47, 66, 0.7)), url(../images/tablx2.jpg)}
             }
-    .sec-one{width: 100%;}
+    .sec-one{width: 100%; 
+             height: 436px;
+             padding-top: 112px;
+             padding-bottom: 112px;}
     .add-list{display: block;}
     .header-but-menu{display: none;}
     .sec-h-one{width: 496px;
@@ -1033,7 +1041,10 @@ img{width: 100%; height: auto; display: block;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-officex2.jpg)}
         }
-    .sec-one{width: 1400px;}
+    .sec-one{width: 1400px;
+             height: 600px;
+             padding-top: 188px;
+             padding-bottom: 188px;}
     .container{width: 1158px; 
         margin: 0 auto;
         /*padding-left: 156px; padding-right: 156px;*/
