--- a/css/styles.css
+++ b/css/styles.css
@@ -723,8 +723,8 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{/*margin-top: 32px; 
-                    margin-bottom: 20px;*/
+    .mob-menu-page1{margin-top: 32px; 
+                    margin-bottom: 20px;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -732,8 +732,8 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page2{/*margin-top: 20px; 
-                    margin-bottom: 20px;*/
+    .mob-menu-page2{margin-top: 20px; 
+                    margin-bottom: 20px;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -741,8 +741,8 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page3{/*margin-top: 20px; 
-                    margin-bottom: 0;*/
+    .mob-menu-page3{margin-top: 20px; 
+                    margin-bottom: 0;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -818,6 +818,7 @@ footer .logo{margin: 0;}
             padding-bottom: 24px;
             }
     .header-list{display: none;}
+    .header-div{display: flex;}
     .header-but-menu{display: flex;}
     header .logo{margin-right: 0;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
