--- a/css/styles.css
+++ b/css/styles.css
@@ -723,8 +723,8 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 32px; 
-                    margin-bottom: 20px;
+    .mob-menu-page1{margin-top: 80px; 
+                    margin-bottom: 40px;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -732,8 +732,7 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page2{margin-top: 20px; 
-                    margin-bottom: 20px;
+    .mob-menu-page2{margin-bottom: 40px;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -741,8 +740,7 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page3{margin-top: 20px; 
-                    margin-bottom: 0;
+    .mob-menu-page3{margin-bottom: 0;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
