--- a/css/styles.css
+++ b/css/styles.css
@@ -673,10 +673,9 @@ footer .logo{margin: 0;}
     align-items: center;
     margin-left: auto;
     background-color: var(--lighter-color);
-    opacity: 0.1;
+    /*opacity: 0.1;*/
     border: 1px solid var(--darker-color);
-    border-radius: 50%;
-    cursor: pointer;}
+    border-radius: 50%;}
 .menu-icon{fill: var(--darker-color);}
   
   @media (min-width: 768px) {
@@ -723,7 +722,7 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 80px; 
+    .mob-menu-page1{margin-top: 56px; 
                     margin-bottom: 40px;
                     font-family: 'Roboto';
                     font-style: normal;
