--- a/css/styles.css
+++ b/css/styles.css
@@ -672,11 +672,12 @@ footer .logo{margin: 0;}
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    background-color: var(--lighter-color);
+    /*background-color: var(--lighter-color);
     opacity: 0.1;
-    border: 1px solid var(--darker-color);
-    border-radius: 50%;
-    cursor: pointer;}
+    border: 1px solid var(--darker-color);*/
+    background-color: var(--lighter-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;}
 .menu-icon{fill: var(--darker-color);}
   
   @media (min-width: 768px) {
@@ -723,7 +724,7 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 80px; 
+    .mob-menu-page1{margin-top: 56px; 
                     margin-bottom: 40px;
                     font-family: 'Roboto';
                     font-style: normal;
