--- a/css/styles.css
+++ b/css/styles.css
@@ -893,7 +893,8 @@ img{width: 100%; height: auto; display: block;}
 .customer-link{width: 190px;}
 .footer-soc-div{align-items: center;
                 justify-content: center;}
-.footer-input{width: 398px;}
+.footer-input{width: 398px;
+              opacity: 0.3;}
 .footer-sub{margin-left: 0px;}
 .footer-p{margin-top: 72px; text-align: center;}
 .footer-soc-div{margin-left: 0px;}
@@ -1016,7 +1017,8 @@ img{width: 100%; height: auto; display: block;}
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
-    .footer-input{width: 264px;}
+    .footer-input{width: 264px;
+                  opacity: 0.3;}
     .subscribe-p{color: var(--white-color);
         margin: 0;
         padding: 0;
