--- a/css/styles.css
+++ b/css/styles.css
@@ -1140,7 +1140,8 @@ img{width: 100%; height: auto; display: block;}
     color: var(--darker-color);}
 .sec-three-item{width: 360px; height: 300px;}
 img{width: 100%; height: auto; display: block;}
-.footer-input{width: 264px;}
+.footer-input{width: 264px;
+              opacity: 1;}
 .subscribe-p{color: var(--white-color);
     margin: 0;
     padding: 0;
