--- a/css/styles.css
+++ b/css/styles.css
@@ -874,7 +874,7 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
-img{width: 100%; height: auto; display: block;}
+img{max-width: 100%; height: auto; display: block;}
 .workers-soc-list{display: flex;
     justify-content: center;
     gap: 24px;}
