--- a/css/styles.css
+++ b/css/styles.css
@@ -296,7 +296,7 @@ img{width: 100%; height: auto; display: block;}
                justify-content: center;
                /*gap: 24px;*/
                flex-wrap: wrap;}
-.customer-link{width: 168px;
+.customer-link{/*width: 168px;*/
                height: 88px;
                border: 1px solid var(--light-gray-color);
                border-radius: 4px;
