--- a/css/styles.css
+++ b/css/styles.css
@@ -861,7 +861,7 @@ footer .logo{margin: 0;}
                 margin: 0;
                 display: none;
                 padding: 0;}
-.sec-five-list{gap: 16px;}
+.sec-five-list{gap: 72px 16px;}
 .sec-three-h-two{margin: 0;
     display: none;
     margin-bottom: 72px;
@@ -985,7 +985,7 @@ img{max-width: 100%; height: auto; display: block;}
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;}
-    .sec-five-list{gap: 24px;}
+    .sec-five-list{gap: 72px 24px;}
     .section{top: 96px;
              padding-bottom: 96px;}
              /*.sec-four-h-two{padding-bottom: 72px;}*/
