--- a/css/styles.css
+++ b/css/styles.css
@@ -824,7 +824,8 @@ footer .logo{margin: 0;}
             .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mobx2.jpg)}
         }
-    .sec-one{width: 100%;
+    .sec-one{/*width: 100%;*/
+            max-width: 100%;
             height: 432px;
             padding-top: 112px;
             padding-bottom: 112px;}
