--- a/css/styles.css
+++ b/css/styles.css
@@ -721,8 +721,8 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{margin-top: 56px; 
-                    margin-bottom: 40px;
+    .mob-menu-page1{/*margin-top: 56px; 
+                    margin-bottom: 40px;*/
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -730,7 +730,7 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page2{margin-bottom: 40px;
+    .mob-menu-page2{/*margin-bottom: 40px;*/
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
@@ -738,7 +738,7 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page3{margin-bottom: 0;
+    .mob-menu-page3{/*margin-bottom: 0;*/
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
