--- a/css/styles.css
+++ b/css/styles.css
@@ -709,7 +709,7 @@ footer .logo{margin: 0;}
     color: var(--brand-color);}
   
   .mobile-menu {
-    
+
     padding: 0;
     margin: 0;
     /*margin-left: 40px;*/
@@ -721,25 +721,25 @@ footer .logo{margin: 0;}
     color: var(--darker-color);
     text-decoration: none;}
 
-    .mob-menu-page1{/*margin-top: 56px; 
-                    margin-bottom: 40px;*/
-                    font-family: 'Roboto';
+    .mobile-menu-li1{margin-top: 56px; 
+                     margin-bottom: 40px;}
+    .mobile-menu-li2{margin-bottom: 40px;}
+    .mobile-menu-li{margin-bottom: auto;}
+    .mob-menu-page1{font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
                     font-size: 36px;
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page2{/*margin-bottom: 40px;*/
-                    font-family: 'Roboto';
+    .mob-menu-page2{font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
                     font-size: 36px;
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
-    .mob-menu-page3{/*margin-bottom: 0;*/
-                    font-family: 'Roboto';
+    .mob-menu-page3{font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
                     font-size: 36px;
