--- a/css/styles.css
+++ b/css/styles.css
@@ -724,7 +724,7 @@ footer .logo{margin: 0;}
     .mobile-menu-li1{margin-top: 32px; 
                      margin-bottom: 40px;}
     .mobile-menu-li2{margin-bottom: 40px;}
-    .mobile-menu-li{margin-bottom: auto;}
+    .mobile-menu-li3{margin-bottom: 0px;}
     .mob-menu-page1{font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 700;
