--- a/css/styles.css
+++ b/css/styles.css
@@ -835,11 +835,9 @@ footer .logo{margin: 0;}
         line-height: 1.1;
         text-transform: capitalize;}
     .sec-button{margin-top: 72px;}
-    .container{max-width: 428px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;}
+    .container{width: 428px;
+    padding-left: 16px; 
+    padding-right: 16px;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{/*width: calc((100% - 72px) / 1);*/
                 width: 100%;}
