--- a/css/styles.css
+++ b/css/styles.css
@@ -836,9 +836,11 @@ footer .logo{margin: 0;}
         line-height: 1.1;
         text-transform: capitalize;}
     .sec-button{margin-top: 72px;}
-    .container{width: 428px;
-    padding-left: 16px; 
-    padding-right: 16px;}
+    .container{max-width: 428px;
+               margin-left: auto;
+               margin-right: auto;
+               padding-left: 16px; 
+               padding-right: 16px;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{/*width: calc((100% - 72px) / 1);*/
                 width: 100%;}
@@ -962,7 +964,7 @@ img{max-width: 100%; height: auto; display: block;}
         color: var(--white-color);
         margin: 0 auto;}
     .sec-button{margin-top: 36px;}
-    .container{width: 768px;
+    .container{max-width: 768px;
         padding-left: 16px; padding-right: 16px;}
     .header-add{display: flex; 
                 margin-left: auto;
@@ -1091,7 +1093,7 @@ img{max-width: 100%; height: auto; display: block;}
              height: 600px;
              padding-top: 188px;
              padding-bottom: 188px;}
-    .container{width: 1158px; 
+    .container{max-width: 1158px;
         margin: 0 auto;
         /*padding-left: 156px; padding-right: 156px;*/
         /*margin-left: 156px; margin-right: 156px;*/}
