--- a/css/styles.css
+++ b/css/styles.css
@@ -229,8 +229,7 @@ img{width: 100%; height: auto; display: block;}
 .section{padding-top: 96px; 
          padding-bottom: 96px;}
 .sec-four-item{background-color: var(--white-color);
-                /*width: 264px;*/
-                width: 100%;
+                width: 264px;
                 border-radius: 0px 0px 4px 4px;
                 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);}
 .sec-four-h-two{font-size: 36px;
@@ -879,6 +878,7 @@ footer .logo{margin: 0;}
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
 .sec-four-list{gap: 72px;}
+.sec-four .list{justify-content: center;}
 img{max-width: 100%; height: auto; display: block;}
 .workers-soc-list{display: flex;
     justify-content: center;
@@ -1017,6 +1017,7 @@ img{max-width: 100%; height: auto; display: block;}
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
 .sec-four-list{gap: 64px 24px;}
+.sec-four .list{justify-content: center;}
 .workers-soc-list{display: flex;
     justify-content: center;
     gap: 24px;}
