--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@ footer .logo{margin: 0;}
     letter-spacing: 0.02em;
     color: var(--lighter-color);
     width: 264px;}
-.footer-div{display: flex;}
+/*.footer-div{display: flex;}*/
 .footer-soc-div{margin-left: 120px;}
 .footer-p{color: var(--white-color);
                 margin: 0;
@@ -896,7 +896,8 @@ img{max-width: 100%; height: auto; display: block;}
     .footer-div{flex-wrap: wrap;
                 align-items: center;
                 /*justify-content: center;*/
-                justify-content: center;}
+                justify-content: center;
+                }
 .footer-text{margin-bottom: 72px;}
 .customer-link{width: 190px;}
 .footer-soc{margin-bottom: 72px;}
@@ -1051,7 +1052,7 @@ img{max-width: 100%; height: auto; display: block;}
     .customer-link{width: 168px;}
     .footer-form{display: flex;}
     .footer-p{text-align: left;}
-    .footer-div{}
+    .footer-div{display: flex;}
     .footer-button{margin-top: 0;
                    margin-left: 24px;}
     .footer .logo{justify-content: flex-start;
@@ -1178,7 +1179,8 @@ img{width: 100%; height: auto; display: block;}
 .footer-p{text-align: left;}
 .footer-soc-div{margin-left: 120px;}
 .footer-div{align-items: flex-start;
-            justify-content: flex-start;}
+            justify-content: flex-start;
+            display: flex;}
 .footer-button{margin-top: 0;
                margin-left: 24px;}
 .footer .logo{justify-content: flex-start;
