--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ body {
         padding-top: 188px;
         padding-bottom: 188px;}
 .div-one{display: flex;
-        flex-direction: column;}
+         flex-direction: column;}
 .container{/*width: 1158px;*/
             width: 100%;
             /*padding-right: 15px;
@@ -175,7 +175,9 @@ body {
                 overflow: hidden;}
 .sec-two-list{gap: 24px;
               padding: 0; 
-              margin: 0;}
+              margin: 0;
+              display: flex;
+              flex-direction: column;}
 .sec-two-li{/*width: calc((100% - 72px) / 4);*/
             width: 100%;}
 .sec-two-item{padding: 0;margin: 0 auto;
