--- a/css/styles.css
+++ b/css/styles.css
@@ -988,7 +988,8 @@ img{max-width: 100%; height: auto; display: block;}
     .sec-two-list{flex-wrap: wrap;
                   gap: 72px 24px;
                   /*row-gap: 72px;
-                  column-gap: 24px;*/}
+                  column-gap: 24px;*/
+                  flex-direction: row;}
     .sec-two-item{font-weight: 700;
         font-size: 36px;
         line-height: 1.1;
@@ -1128,7 +1129,7 @@ img{max-width: 100%; height: auto; display: block;}
         /*padding-top: 24px;
         padding-bottom: 24px;*/}
     .header-list{display: flex;}
-    .sec-two-list{flex-wrap: nowrap;}
+    .sec-two-list{flex-wrap: nowrap; flex-direction: row;}
     .sec-two-item{font-weight: 500;
             letter-spacing: 0.02em;
             font-size: 20px;
