--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ body {
     width: 169px;
     height: 56px;
     border: none;
+    margin-top: 72px;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .sec-button:hover, .sec-button:focus{background-color: var(--violet-color); color: var(--white-color);}
