--- a/css/styles.css
+++ b/css/styles.css
@@ -187,12 +187,24 @@ body {
     letter-spacing: 0.02em;
     font-size: 20px;
     line-height: 1.2;
-    color: var(--darker-color);}
+    color: var(--darker-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    justify-content: center;
+    align-items: center;
+    text-align: center;}
 .sec-two-text{margin: 0;padding: 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--gray-color);}
+    color: var(--gray-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;}
 .div-two{width: 264px;
          height: 112px;
          background-color: var(--light-color);
