--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ body {
                 clip-path: inset(100%);
                 clip: rect(0 0 0 0);
                 overflow: hidden;}
-.sec-two-list{gap: 24px;
+.sec-two-list{gap: 72px;
               padding: 0; 
               margin: 0;
               display: flex;
@@ -1146,7 +1146,9 @@ img{max-width: 100%; height: auto; display: block;}
         /*padding-top: 24px;
         padding-bottom: 24px;*/}
     .header-list{display: flex;}
-    .sec-two-list{flex-wrap: nowrap; flex-direction: row;}
+    .sec-two-list{flex-wrap: nowrap; 
+                  flex-direction: row;
+                  gap: 24px;}
     .sec-two-item{font-weight: 500;
             letter-spacing: 0.02em;
             font-size: 20px;
