--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ img{width: 100%; height: auto; display: block;}
                 color:  var(--darker-color);
                 margin: 0 auto;
                 margin-bottom: 72px;}
-.sec-four-list{/*gap: 24px;*/ 
+.sec-four-list{gap: 72px; 
                padding: 0; 
                margin: 0;
                display: flex;
